@@ -3,6 +3,14 @@ Changes
 
 All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 
+Next
+----
+
+New features:
+
+- We've added a ``MemoryFile`` class which supports formatted in-memory
+  feature collections (#501).
+
 1.8a1 (2017-11-06)
 ------------------
 
